export interface Building {
  id?: string;
  code?: string;
  name?: string;
  description?: string;
  width?: number;
  depth?: number
}
