export interface BuildingConnection {
    id?: string;
    floor1Id?: string;
    floor2Id?: string;
    posXFloor1?: number;
    posYFloor1?: number;
    posXFloor2?: number;
    posYFloor2?: number;
    isChecked?:boolean;
}
  