export interface Robot {
  id?: string;
  code?: string;
  name?: string;
  robotTypeId?: string;
  number?: string;
  status?: boolean;
  description?: string
}
