export interface RobotType {
  id?: string;
  type?: string;
  brand?: string;
  model?: string;
  possibleTasks?: string[]
}
